fixed story text alignment

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -15,6 +15,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
 }
 
 .login-page {
